objects/BX_041__c.object
<CustomObject>
    <fields>
        <fullName>Action_on_VF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Action on VF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Actual Approver for CDRS</description>
        <label>Actual Approver</label>
        <referenceTo>BX041_IP__c</referenceTo>
        <relationshipLabel>Customer Device Requirement Spec (CDRS)</relationshipLabel>
        <relationshipName>Customer_Device_Requirement_Spec_CDRS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Action__c</fullName>
        <defaultValue>&quot;&quot;</defaultValue>
        <label>Approval Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved by FAE</fullName>
                </value>
                <value>
                    <fullName>Approved by FTS</fullName>
                </value>
                <value>
                    <fullName>Approved by CE</fullName>
                </value>
                <value>
                    <fullName>Approved by PI/YE</fullName>
                </value>
                <value>
                    <fullName>Approved by FAE/FTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Step__c</fullName>
        <description>To control the approval process</description>
        <label>Approval Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending for Customer</fullName>
                </value>
                <value>
                    <fullName>Pending for FAE</fullName>
                </value>
                <value>
                    <fullName>Pending for FTS</fullName>
                </value>
                <value>
                    <fullName>Pending for CE</fullName>
                </value>
                <value>
                    <fullName>Pending for PIYE</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending for FAE/FTS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BX_0419</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BX_041</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BX_0411</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Process_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to be filled by the FE users</description>
        <label>Assigned Process ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Geometry_Filter__c</field>
                <operation>contains</operation>
                <valueField>Process__c.Tech_Geometry__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Customer Device Requirement Spec (CDRS) (Assigned Process ID)</relationshipLabel>
        <relationshipName>BX_0412</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Process_Status__c</fullName>
        <label>Assigned Process Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BX_041_Opportunity_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDRS Opportunity Program</label>
        <referenceTo>Opportunity_Program__c</referenceTo>
        <relationshipLabel>Customer Device Requirement Spec (CDRS)</relationshipLabel>
        <relationshipName>BX_041</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BX_041_Status__c</fullName>
        <label>CDRS Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Submission</fullName>
                    <default>true</default>
                    <label>Pending Submission</label>
                </value>
                <value>
                    <fullName>Pending Review</fullName>
                </value>
                <value>
                    <fullName>Pending Acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Frozen/Pending PID Assignment</fullName>
                </value>
                <value>
                    <fullName>Suspended PID Assigned</fullName>
                </value>
                <value>
                    <fullName>Pending Gap Closure</fullName>
                </value>
                <value>
                    <fullName>Registered/TBO PID Assigned</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Backtrack_Request__c</fullName>
        <label>Backtrack Request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backtrack to FTS</fullName>
                </value>
                <value>
                    <fullName>Backtrack to CE</fullName>
                </value>
                <value>
                    <fullName>Backtrack to PI/YE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDRS_Close_Date__c</fullName>
        <description>Created for reporting purpose</description>
        <label>CDRS Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CDRS_Submitted_Date__c</fullName>
        <description>Created for reporting purpose</description>
        <label>CDRS Submitted Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CDRS_Turn_around_Time__c</fullName>
        <formula>IF((CDRS_Close_Date__c -  CDRS_Submitted_Date__c ) &lt;0,null,CDRS_Close_Date__c -  CDRS_Submitted_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDRS Turn around Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CE_Approval_Date__c</fullName>
        <description>created for reporting purpose</description>
        <label>CE Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CE_Approval_Turn_around_Time__c</fullName>
        <formula>IF((CE_Approval_Date__c- CDRS_Submitted_Date__c )&lt;0,null,CE_Approval_Date__c- CDRS_Submitted_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CE Approval Turn around Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRMDID_Fromula__c</fullName>
        <formula>Device__r.CRMDID__c</formula>
        <label>CRMDID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMDID__c</fullName>
        <label>CRMDID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Change_Infomation_Details__c</fullName>
        <description>To capture the changed information after submitting the bx041 record.</description>
        <label>Change Infomation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Configuration_Status__c</fullName>
        <formula>IF( ISPICKVAL(BX_041_Status__c, &apos;Pending Submission&apos;),
   &apos;IN PROGRESS&apos;,
   IF((ISPICKVAL(BX_041_Status__c, &apos;Pending Submission&apos;) &amp;&amp; 
          ISPICKVAL(Approval_Status__c, &apos;Approved by FAE&apos;))||ISPICKVAL(BX_041_Status__c, &apos;Pending Review&apos;),
       &apos;DRAFT&apos;,
       IF(ISPICKVAL(BX_041_Status__c, &apos;Pending Acknowledgement&apos;),
           &apos;DESIGN&apos;,
           IF(ISPICKVAL(BX_041_Status__c, &apos;Frozen/Pending PID Assignment&apos;),
                &apos;PROCESS TO BE ACCEPTED&apos;,                
                IF(ISPICKVAL(BX_041_Status__c, &apos;Suspended PID Assigned&apos;)||ISPICKVAL(BX_041_Status__c, &apos;Registered/TBO PID Assigned&apos;)||ISPICKVAL(BX_041_Status__c, &apos;Pending Gap Closure&apos;)||ISPICKVAL(BX_041_Status__c, &apos;Closed&apos;),
                    &apos;PROCESS FLOW ACCEPTED&apos;,
                    &apos;&apos;
                )
           )
       )
       
   )

)</formula>
        <label>Configuration Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSCP__c</fullName>
        <label>DSDP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Match_Vendor_DR_DM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Match Vendor DR/DM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Match_Vendor_EPET__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Match Vendor EPET?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Match_Vendor_EP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Match Vendor EP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Match_Vendor_SPICE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Match Vendor SPICE?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Device__c</fullName>
        <label>Device</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipName>BX_041</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Die_Size_Pre_Shrink_mm2__c</fullName>
        <formula>Die_Size_X_mm__c  *  Die_Size_Y_mm__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Die Size (Pre-Shrink) mm2</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Die_Size_X_mm__c</fullName>
        <label>Die Size X (Pre-Shrink) mm</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Die_Size_Y_mm__c</fullName>
        <label>Die Size Y (Pre-Shrink) mm</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Die_Size_mm2__c</fullName>
        <label>Die Size (Pre-Shrink) mm2</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_IPs_require_replacement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External IPs require replacement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAP_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GAP Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GLOBALFOUNDRIES_Sponsored_IP_Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GLOBALFOUNDRIES Sponsored IP Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Geometry_Filter__c</fullName>
        <description>coping value from the device level.</description>
        <label>Geometry Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.003UM</fullName>
                </value>
                <value>
                    <fullName>0.010UM</fullName>
                </value>
                <value>
                    <fullName>0.012UM</fullName>
                </value>
                <value>
                    <fullName>0.014UM</fullName>
                </value>
                <value>
                    <fullName>0.020UM</fullName>
                </value>
                <value>
                    <fullName>0.022UM</fullName>
                </value>
                <value>
                    <fullName>0.028UM</fullName>
                </value>
                <value>
                    <fullName>0.032UM</fullName>
                </value>
                <value>
                    <fullName>0.040UM</fullName>
                </value>
                <value>
                    <fullName>0.045UM</fullName>
                </value>
                <value>
                    <fullName>0.055UM</fullName>
                </value>
                <value>
                    <fullName>0.060UM</fullName>
                </value>
                <value>
                    <fullName>0.065UM</fullName>
                </value>
                <value>
                    <fullName>0.09UM</fullName>
                </value>
                <value>
                    <fullName>0.11UM</fullName>
                </value>
                <value>
                    <fullName>0.13UM</fullName>
                </value>
                <value>
                    <fullName>0.14UM</fullName>
                </value>
                <value>
                    <fullName>0.152UM</fullName>
                </value>
                <value>
                    <fullName>0.153UM</fullName>
                </value>
                <value>
                    <fullName>0.15UM</fullName>
                </value>
                <value>
                    <fullName>0.16UM</fullName>
                </value>
                <value>
                    <fullName>0.17UM</fullName>
                </value>
                <value>
                    <fullName>0.18UM</fullName>
                </value>
                <value>
                    <fullName>0.20UM</fullName>
                </value>
                <value>
                    <fullName>0.22UM</fullName>
                </value>
                <value>
                    <fullName>0.25UM</fullName>
                </value>
                <value>
                    <fullName>0.30UM</fullName>
                </value>
                <value>
                    <fullName>0.32UM</fullName>
                </value>
                <value>
                    <fullName>0.35UM</fullName>
                </value>
                <value>
                    <fullName>0.45UM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <formula>Device__r.Geometry__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geometry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Submitter__c</fullName>
        <label>Initial Submitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intended_Rotation_in_PTRF__c</fullName>
        <label>Intended Rotation in PTRF</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Notes__c</fullName>
        <label>Key Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Max_Operating_Freq_MHz__c</fullName>
        <label>Max Operating Freq (MHz)</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name_of_PIYE_Queue__c</fullName>
        <label>Name of PIYE Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_EDA_Tools_Tech_Files__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need EDA Tools &amp; Tech Files?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_High_Voltage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need High Voltage?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_IP_Merge_information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need IP Merge information?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_IP_information__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need IP information?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_MEMS_informaton__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need MEMS informaton?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_NVM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Non-Volatile Memory?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_PowerMOS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need PowerMOS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_RF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need RF?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_Turnkey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need Turnkey?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Need_eDRAM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Need eDRAM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_WorkItem_Id__c</fullName>
        <label>Next WorkItem Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_CE_Approver__c</fullName>
        <defaultValue>0</defaultValue>
        <label>No of CE Approver</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Gates__c</fullName>
        <label>No. of Gates</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_IOs__c</fullName>
        <label>No. of IOs</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Pins__c</fullName>
        <label>No. of Pins</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notch_Location__c</fullName>
        <label>Notch Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Program__c</fullName>
        <formula>Device__r.Opportunity_Program_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Special_Requirements__c</fullName>
        <label>Other Special Requirements</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Gap_Status__c</fullName>
        <label>Overall Gap Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <label>Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PI_YE_Approval_Date__c</fullName>
        <description>Created for reporting purpose</description>
        <label>PI/YE Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PI_YE_Turn_around_Time__c</fullName>
        <formula>IF((PI_YE_Approval_Date__c - CE_Approval_Date__c)&lt;0,null,PI_YE_Approval_Date__c - CE_Approval_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PI/YE Turn around Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Poly_Orientation_Compliance__c</fullName>
        <label>Poly Orientation Compliance</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Porting_Design_External_IPs_require_rep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Porting Design: External IPs require rep</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Process_Family_Filter__c</fullName>
        <description>copy the Process Family Filter field from the device level</description>
        <label>Process Family Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Super Low Power</fullName>
                </value>
                <value>
                    <fullName>Super High Performance</fullName>
                </value>
                <value>
                    <fullName>Low Power eDRAM</fullName>
                </value>
                <value>
                    <fullName>Interposer</fullName>
                </value>
                <value>
                    <fullName>SOI</fullName>
                </value>
                <value>
                    <fullName>MEMS</fullName>
                </value>
                <value>
                    <fullName>High Performance / Low Voltage</fullName>
                </value>
                <value>
                    <fullName>Low Power / Ultra Low Leakage</fullName>
                </value>
                <value>
                    <fullName>Photonics</fullName>
                </value>
                <value>
                    <fullName>Generic / Nominal</fullName>
                </value>
                <value>
                    <fullName>XM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_ID_is_known__c</fullName>
        <label>Process ID is known?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Technology__c</fullName>
        <formula>Device__r.Process_Technology_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Technology</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference_Process_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be filled by the Customer</description>
        <label>Reference Process ID</label>
        <referenceTo>Process__c</referenceTo>
        <relationshipName>BX_041</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_Process_ID_txt__c</fullName>
        <label>Reference Process ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Process_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To be filled by PIYE users</description>
        <label>Requested Process ID</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>$Source.Geometry_Filter__c</field>
                <operation>contains</operation>
                <valueField>Process__c.Tech_Geometry__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Process_Family_Filter__c</field>
                <operation>contains</operation>
                <valueField>Process__c.Process_Family__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Process__c</referenceTo>
        <relationshipLabel>Customer Device Requirement Spec (CDRS) (Requested Process ID)</relationshipLabel>
        <relationshipName>BX_0411</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restricted_Gate_Poly_Orientation__c</fullName>
        <label>Restricted Gate Poly Orientation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STF__c</fullName>
        <label>STF</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Scribe_Width__c</fullName>
        <label>Special Scribe Width</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_5_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Step-5 Assigned?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steps_Completed__c</fullName>
        <label>Steps Completed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Steps_Rejected__c</fullName>
        <label>Steps Rejected</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_By_FAE__c</fullName>
        <formula>CONTAINS(CreatedBy.Profile.Name, &quot;FAE&quot;)</formula>
        <label>Submitted By FAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <formula>IF( VALUE(SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &lt;= 0.032,
    &apos;Geometry 32nm/28nm &amp; below&apos;, 
    IF(VALUE (SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &gt;= 0.040 &amp;&amp; VALUE( SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &lt;= 0.045,
        &apos;Geometry 45nm - 40nm&apos;,
        IF( VALUE(SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &gt;= 0.055 &amp;&amp; VALUE (SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &lt;= 0.090 ,
            &apos;Geometry 90nm - 55nm&apos;,
            IF(VALUE(SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &gt;= 0.11 &amp;&amp; VALUE (SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &lt;= 0.13,
                &apos;Geometry 0.11um - 0.13um&apos;,
                IF(VALUE(SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &gt; 0.13 &amp;&amp; VALUE (SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &lt;= 0.25,
                    &apos;Geometry 0.14um - 0.25um&apos;,
                    IF(VALUE(SUBSTITUTE(TEXT(Geometry_Filter__c),&apos;UM&apos;,&apos;&apos;)) &gt;= 0.30,
                        &apos;Geometry 0.30um &amp; Greater&apos;,
                        &apos;NONE&apos;
                    )
                )
            )                    
        )
    )
)</formula>
        <label>Template Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Who_build__c</fullName>
        <label>Who build?</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdrs_status_checker__c</fullName>
        <formula>IF(Text(BX_041_Status__c) = Text(Device__r.BX041_Status__c) , true,false)</formula>
        <label>cdrs status checker</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer Device Requirement Spec (CDRS)</label>
    <listViews>
        <fullName>Geometry_0_14um_0_25um</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Template_Name__c</field>
            <operation>equals</operation>
            <value>Geometry 0.14um - 0.25um</value>
        </filters>
        <label>Geometry 0.14um - 0.25um</label>
        <language>en_US</language>
        <sharedTo>
            <group>AMS_Support</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CDRS-{000000}</displayFormat>
        <label>CDRS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Device Requirement Spec (CDRS)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>